fixed some issues

--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -38,7 +38,7 @@
             <div class="col-md-12">
                 <div class="contact">
                     <div class="controls">
-                        <img th:src="@{*{pictures[0]}}" alt="cover" class="cover">
+                        <img th:src="@{*{picture}}" alt="cover" class="cover" style="height: 500px; width: 100%; display: block;">
                     </div>
 
                     <div class="row">
