--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -47,7 +47,7 @@
 
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
                         <div class="white-box text-center">
-                            <img th:src="*{pictures[0]}" class="img-responsive">
+                            <img th:src="*{pictures[0]}" class="img-responsive" style="height: 225px; width: 100%; display: block;">
                         </div>
                     </div>
 
