--- a/src/main/resources/templates/addCreator.html
+++ b/src/main/resources/templates/addCreator.html
@@ -81,14 +81,14 @@
                                             Click to upload images
                                         </label>
                                         <input class="form-control" type="file"
-                                               id="formFile" multiple accept=".jpg, .jpeg, .png"
-                                               th:field="*{pictures}" th:errorclass="invalid-field">
+                                               id="formFile" accept=".jpg, .jpeg, .png"
+                                               th:field="*{picture}" th:errorclass="invalid-field">
                                         <div class="error"  th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
                                         </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
-                                        <thead><tr><th>Files Uploaded:</th></tr></thead>
+                                        <thead><tr><th>File Uploaded(Maximum 1):</th></tr></thead>
                                         <tbody>
                                         </tbody>
                                     </table>
