--- a/src/main/resources/templates/addDistributor.html
+++ b/src/main/resources/templates/addDistributor.html
@@ -92,13 +92,13 @@
                                         </label>
                                         <input class="form-control" type="file"
                                                id="formFile" multiple accept=".jpg, .jpeg, .png"
-                                               th:field="*{pictures}" th:errorclass="invalid-field">
+                                               th:field="*{picture}" th:errorclass="invalid-field">
                                         <div class="error"  th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
                                         </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
-                                        <thead><tr><th>Files Uploaded:</th></tr></thead>
+                                        <thead><tr><th>Files Uploaded(Maximum 1):</th></tr></thead>
                                         <tbody>
                                         </tbody>
                                     </table>
