--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -44,7 +44,9 @@
                 <h3 class="card-title" th:text="*{title}"></h3>
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
-                        <div class="white-box text-center"><img th:src="*{pictures[0]}" class="img-responsive"></div>
+                        <div class="white-box text-center">
+                            <img th:src="*{pictures[0]}" class="img-responsive" style="height: 225px; width: 100%; display: block;">
+                        </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
                         <h4 class="box-title mt-5">Product description</h4>
