--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -52,16 +52,16 @@
 
                     <!--                    Change ids(and label fors) and sort options-->
 
-                    <input type="radio" name="sort_alphabetically" value="Sort Alphabetically" id="1">
-                    <label for="1">Sort Alphabetically</label>
+                    <input type="radio" name="sort" value="title" id="1">
+                    <label for="1">Sort By Title(Default)</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort by Price(Low to High)" id="2">
-                    <label for="2">Sort By Price(Low to High)</label>
+                    <input type="radio" name="sort" value="recommendedPrice" id="2">
+                    <label for="2">Sort By Recommended Price(Low to High)</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort by Price(High to Low)" id="3">
+                    <input type="radio" name="sort" value="Sort by Price(High to Low)" id="3">
                     <label for="3">Sort by Price(High to Low)</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort by " id="4">
+                    <input type="radio" name="sort" value="Sort by " id="4">
                     <label for="4">Sort Alphabetically</label>
 
                 </form>
