--- a/src/main/resources/templates/fragments/sortModal.html
+++ b/src/main/resources/templates/fragments/sortModal.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <form action="#" method="get" id="sort_form">
+                    <form th:action="" th:method="get" id="sort_form">
 
                         <!--                    Change ids(and label fors) and sort options-->
 
