--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -34,7 +34,51 @@
 </header>
 
 <!-- Sort Modal -->
-<th:block th:replace="~{/fragments/sortModal.html}"/>
+<article class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Sort</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <form th:action="@{/wishlist}" th:method="get" id="sort_form">
+
+<!--                                        Change ids(and label fors) and sort options-->
+
+                    <input type="radio" th:name="sort" th:value="sa" id="1">
+                    <label for="1">Sort Alphabetically</label>
+
+                    <input type="radio" th:name="sort" th:value="splth" id="2">
+                    <label for="2">Sort By Price(Low to High)</label>
+
+                    <input type="radio" th:name="sort" th:value="sphtl" id="3">
+                    <label for="3">Sort by Price(High to Low)</label>
+
+                    <input type="radio" th:name="sort" th:value="sra" id="4">
+                    <label for="4">Sort Alphabetically</label>
+
+                </form>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">
+                        Close
+                    </button>
+                    <button type="submit" class="btn btn-primary" id="saveSortBtn" form="sort_form">
+                        Save changes
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</article>
 
 <!--Sidebar-->
 
