sort and search functionalities are done

--- a/src/main/resources/templates/fragments/searchbar.html
+++ b/src/main/resources/templates/fragments/searchbar.html
@@ -1,5 +1,5 @@
 <th:block>
-    <form th:action="@{/{items}/search}" th:method="GET" class="search" id="searchForm">
+    <form th:action="@{${#httpServletRequest.requestURI}}" th:method="GET" class="search" id="searchForm">
         <input class="button sort btn btn-primary" type="button" data-toggle="modal" data-target="#exampleModalCenter" id="openSortModalBtn" name="category">
         <input id="searchField" class="input" type="text" name="search" placeholder="Search">
         <input class="button btn" type="submit" name="submit" value="🔍"/>
