--- a/src/main/resources/templates/offers.html
+++ b/src/main/resources/templates/offers.html
@@ -48,21 +48,19 @@
             </div>
 
             <div class="modal-body">
-                <form action="#" method="get" id="sort_form">
+                <form action="javascript:void(0)" method="get" id="sort_form">
 
-                    <!--                    Change ids(and label fors) and sort options-->
+                    <input type="radio" name="sort" value="deck.title" id="1">
+                    <label for="1">Sort By Deck Title(Default)</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort Alphabetically" id="1">
-                    <label for="1">Sort Alphabetically</label>
+                    <input type="radio" name="sort" value="price" id="2">
+                    <label for="2">Sort By Recommended Price(Low to High)</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort by Price(Low to High)" id="2">
-                    <label for="2">Sort By Price(Low to High)</label>
+                    <input type="radio" name="sort" value="seller.username" id="3">
+                    <label for="3">Sort by Seller</label>
 
-                    <input type="radio" name="sort_alphabetically" value="Sort by Price(High to Low)" id="3">
-                    <label for="3">Sort by Price(High to Low)</label>
-
-                    <input type="radio" name="sort_alphabetically" value="Sort by " id="4">
-                    <label for="4">Sort Alphabetically</label>
+                    <input type="radio" name="sort" value="distributor.brand" id="4">
+                    <label for="4">Sort by Distributor</label>
 
                 </form>
 
