--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -1,6 +1,7 @@
 @import "utils/navigation.css";
 @import "utils/footer.css";
 @import "utils/defaults.css";
+@import "utils/modal.css";
 
 body{
     background: url(../images/page-header-bg.jpg) center center repeat #0b1319;
