--- a/src/main/resources/static/css/catalog.css
+++ b/src/main/resources/static/css/catalog.css
@@ -2,6 +2,7 @@
 @import "utils/footer.css";
 @import "utils/backToTopBtn.css";
 @import "utils/defaults.css";
+@import "utils/modal.css";
 
 body{
     font-size: 15px;
@@ -10,53 +11,6 @@ body{
 
 /*sort modal*/
 
-#exampleModalCenter{
-    position: fixed;
-    z-index: 1;
-}
-
-.modal-backdrop{
-    position: fixed;
-    z-index: 0;
-}
-
-.sortBtnWrap{
-    max-width: 33vw;
-}
-
-#saveSortBtn{
-    background-color: var(--dense-gold);
-    border-color: transparent;
-}
-
-#closeModalBtn{
-    background-color: var(--light-black);
-    border-color: transparent;
-}
-
-.search .sort{
-    background-color: var(--royal-red);
-}
-
-.modal-body{
-    margin: 0 !important;
-}
-
-.modal-body input{
-    -webkit-appearance: none;
-    display: none;
-    background: none;
-    border: none;
-}
-
-.modal-body form>label{
-    width: 100%;
-    line-height: 40px;
-}
-
-.modal-body input[type="radio"]:checked + label{
-    background-color: var(--grey);
-}
 
 
 /*search bar*/
