--- a/src/main/resources/templates/addCreator.html
+++ b/src/main/resources/templates/addCreator.html
@@ -83,7 +83,7 @@
                                         <input class="form-control" type="file"
                                                id="formFile" accept=".jpg, .jpeg, .png"
                                                th:field="*{picture}" th:errorclass="invalid-field">
-                                        <div class="error"  th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
+                                        <div class="error"  th:text="*{picture}">
                                         </div>
                                     </div>
 
