filter/search functionality by distributor and creator

--- a/src/main/resources/templates/creatorDetails.html
+++ b/src/main/resources/templates/creatorDetails.html
@@ -53,7 +53,7 @@
                                     Decks:
                                 </div>
                                 <div class="col-xs-9">
-                                    <a th:href="@{/decks/search/{name} (name=*{name})}">View All Decks Here</a>
+                                    <a th:href="@{/decks/all(creator=*{name})}">View All Decks Here</a>
                                 </div>
                             </div>
                         </div>
