--- a/src/main/resources/templates/distributorDetails.html
+++ b/src/main/resources/templates/distributorDetails.html
@@ -54,7 +54,7 @@
                                     Decks:
                                 </div>
                                 <div class="col-xs-9">
-                                    <a th:href="@{/decks/search/{brand} (brand=*{brand})}">View All Decks Here</a>
+                                    <a th:href="@{/decks/all (distributor=*{brand})}">View All Decks Here</a>
                                 </div>
                                 <div class="col-xs-3">
                                     URL:
